// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlText all options renders as expected 1`] = `
<body>
  <div>
    <div
      class="relative bg-gray-faint"
    >
      <div>
        <label
          class="inline-block txt-s txt-bold"
          id="radix-10"
          role="label"
        >
          All options
           
          <span
            class="txt-normal"
          >
            (optional)
          </span>
        </label>
        <span
          class="inline-block ml12"
        >
          <span>
            Aside text
          </span>
        </span>
      </div>
      <div
        class="flex"
        data-testid="control-text-container"
      >
        <input
          aria-invalid="true"
          aria-labelledby="radix-10"
          aria-required="false"
          autocapitalize="none"
          autocorrect="off"
          class="txt-bold input round-l flex-child-grow"
          data-testid="testinput-input"
          id="testinput"
          name="testinput"
          placeholder="Enter an email address"
          spellcheck="false"
          style="box-shadow: inset 0 0 0 1px #f74e4e;"
          type="email"
          value="foo@bar.baz"
        />
        <button
          class="bg-red color-white round-r px6"
          data-testid="validation-error"
          role="alert"
          type="button"
        >
          <span
            class="flex flex--center-cross flex--center-main"
          >
            <svg
              aria-hidden="true"
              class="cursor-pointer"
              data-testid="icon-alert"
              fill="white"
              focusable="false"
              style="width: 18px; height: 18px;"
            >
              <use
                xlink:href="#icon-alert"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
            >
              alert
            </span>
          </span>
        </button>
      </div>
      <div
        role="alert"
      />
    </div>
  </div>
  <div>
    <div>
      <div
        data-test="popover-body"
        style="position: absolute; z-index: 1; top: 0px; left: 0px; visibility: visible; transform: translate3d(5px, 11px, 0); max-width: -10px; max-height: 758px;"
      >
        <div
          class="color-white shadow-darken25 round px12 py6"
          data-popover-id="5"
          role="dialog"
          style="background-color: rgb(14, 33, 39);"
          tabindex="-1"
        >
          oh no!
        </div>
      </div>
      <div
        data-test="popover-pointer"
        style="position: absolute; z-index: 1; top: 0px; left: 0px; visibility: visible; transform: translate3d(-6px, 5px, 0); border-top: 0; border-bottom: 6px solid #0E2127; border-left: 6px solid transparent; border-right: 6px solid transparent;"
      />
    </div>
  </div>
</body>
`;

exports[`ControlText basic renders as expected 1`] = `
<body>
  <div>
    <div
      class="relative "
    >
      <div>
        <label
          class="inline-block txt-s txt-bold mb6"
          id="radix-0"
          role="label"
        >
          basic
           
        </label>
      </div>
      <input
        aria-labelledby="radix-0"
        aria-required="true"
        class="input"
        data-testid="testinput-input"
        id="testinput"
        name="testinput"
        type="text"
        value=""
      />
      <div
        role="alert"
      />
    </div>
  </div>
</body>
`;

exports[`ControlText disabled renders as expected 1`] = `
<body>
  <div>
    <div
      class="relative "
    >
      <div>
        <label
          class="inline-block txt-s txt-bold mb6"
          id="radix-2"
          role="label"
        >
          basic
           
        </label>
      </div>
      <input
        aria-labelledby="radix-2"
        aria-required="true"
        class="input"
        data-testid="testinput-input"
        disabled=""
        id="testinput"
        name="testinput"
        type="text"
        value=""
      />
      <div
        role="alert"
      />
    </div>
  </div>
</body>
`;

exports[`ControlText validation error (inline) renders as expected 1`] = `
<body>
  <div>
    <div
      class="relative "
    >
      <div>
        <label
          class="inline-block txt-s txt-bold mb6"
          id="radix-5"
          role="label"
        >
          basic
           
        </label>
      </div>
      <div
        class="flex"
        data-testid="control-text-container"
      >
        <input
          aria-invalid="true"
          aria-labelledby="radix-5"
          aria-required="true"
          class="input round-l flex-child-grow"
          data-testid="testinput-input"
          id="testinput"
          name="testinput"
          style="box-shadow: inset 0 0 0 1px #f74e4e;"
          type="text"
          value=""
        />
        <button
          class="bg-red color-white round-r px6"
          data-testid="validation-error"
          role="alert"
          type="button"
        >
          <span
            class="flex flex--center-cross flex--center-main"
          >
            <svg
              aria-hidden="true"
              class="cursor-pointer"
              data-testid="icon-alert"
              fill="white"
              focusable="false"
              style="width: 18px; height: 18px;"
            >
              <use
                xlink:href="#icon-alert"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
            >
              alert
            </span>
          </span>
        </button>
      </div>
      <div
        role="alert"
      />
    </div>
  </div>
</body>
`;

exports[`ControlText validation error renders as expected 1`] = `
<body>
  <div>
    <div
      class="relative "
    >
      <div>
        <label
          class="inline-block txt-s txt-bold mb6"
          id="radix-4"
          role="label"
        >
          basic
           
        </label>
      </div>
      <input
        aria-invalid="true"
        aria-labelledby="radix-4"
        aria-required="true"
        class="input"
        data-testid="testinput-input"
        id="testinput"
        name="testinput"
        type="text"
        value=""
      />
      <div
        role="alert"
      >
        <div
          class="bg txt-s mt3 py6 px12 bg-red-faint round border border--red color-red"
          data-testid="testinput-error"
          id="testinput-error"
        >
          oh no!
        </div>
      </div>
    </div>
  </div>
</body>
`;
